c/examples/writing-a-c-compiler-tests/tests/chapter_7/valid/extra_credit/goto_outer_scope.c
int main(void) {
    int a = 10;
    int b = 0;
    if (a) {
        int a = 1;
        b = a;
        goto end;
    }
    a = 9;
end:
    return (a == 10 && b == 1);
}